<resources>
    <string name="app_name">Burguer FIAP</string>
    <string name="card_pio">Cardápio</string>
    <string name="total">Total</string>
    <string name="sorvete">Sorvete</string>
    <string name="bata_frita">Bata Frita</string>
    <string name="bolo">Bolo</string>
    <string name="bolode_de_cholate_recheado">Bolode de cholate recheado</string>
    <string name="valor_r_15_00">valor:R$15,00</string>
    <string name="sorvete_de_baunilha">Sorvete de Baunilha</string>
    <string name="valor_r_5_00">valor:R$5,00</string>
    <string name="batata_frita_media">Batata frita media</string>
    <string name="valor_r_7_00">valor:R$7,00</string>
</resources>
