<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#febd27"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bolo"
        android:textSize="30dp"
        android:textColor="#000000"
        android:textAlignment="center"/>

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bolomaior"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bolode_de_cholate_recheado"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_r_15_00"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="#000000"/>
</LinearLayout>
